<resources>
    <string name="app_name">Apothecary</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_scan">Scan</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_scanner">ScannerActivity</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_registration">Register</string>
    <string name="medicine_name_label">Name</string>
    <string name="medicine_qty">Quantity</string>
    <string name="medicine_dose_label">Dose/day</string>
    <string name="title_activity_add_prescription">AddPrescriptionActivity</string>
    <string name="add_prescription_item_label">Add</string>
    <string name="save_prescription_button_label">Save</string>
    <string name="expiry_date_label">Expiry Date</string>
    <string name="cancel_prescription_item_label">Cancel</string>
</resources>
